# src/main/resources/api.yml
@@ -26,19 +26,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /accounts:
+  /account:
     get:
-      summary: Get Accounts
-      operationId: getAccounts
+      summary: Get Account
+      operationId: getAccount
       tags:
         - account
+      parameters:
+        - name: id
+          in: path
+          description: ID of Account to fetch
+          required: true
+          schema:
+            type: string
+            format: uuid 
       responses:
         '200':
-          description: List of Accounts
+          description: List of Account
           content:
             application/json:    
               schema:
-                $ref: "#/components/schemas/Accounts"
+                $ref: "#/components/schemas/Account"
         default:
           description: unexpected error
           content:
