# target/generated-sources/openapi/src/main/java/com/unicorn/bank/api/AccountsApi.java
@@ -1,48 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.1.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package com.unicorn.bank.api;
-
-import com.unicorn.bank.model.Account;
-import com.unicorn.bank.model.Error;
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-import springfox.documentation.annotations.ApiIgnore;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-02-15T21:07:09.231484Z[Europe/London]")
-@Validated
-@Api(value = "accounts", description = "the accounts API")
-public interface AccountsApi {
-
-    default AccountsApiDelegate getDelegate() {
-        return new AccountsApiDelegate() {};
-    }
-
-    /**
-     * GET /accounts : Get Accounts
-     *
-     * @return List of Accounts (status code 200)
-     *         or unexpected error (status code 200)
-     */
-    @ApiOperation(value = "Get Accounts", nickname = "getAccounts", notes = "", response = Account.class, responseContainer = "List", tags={ "account", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "List of Accounts", response = Account.class, responseContainer = "List"),
-        @ApiResponse(code = 200, message = "unexpected error", response = Error.class) })
-    @GetMapping(
-        value = "/accounts",
-        produces = { "application/json" }
-    )
-    default ResponseEntity<List<Account>> getAccounts() {
-        return getDelegate().getAccounts();
-    }
-
-}
